force-app/main/default/objects/Product2/fields/DRC_NBC_Category_Level_1__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Category_Level_1__c</fullName>
    <label>Category Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Epoxy curing agent</fullName>
            </value>
            <value>
                <fullName>Adhesion promoter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>