force-app/main/default/objects/Product2/fields/DRC_NBC_Category_Level_2__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Category_Level_2__c</fullName>
    <label>Category Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Epoxy curing agent</fullName>
            </value>
            <value>
                <fullName>Epoxy resin</fullName>
            </value>
            <value>
                <fullName>Isocyanates</fullName>
            </value>
            <value>
                <fullName>Non-reactive polyamide</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Polyols</fullName>
            </value>
            <value>
                <fullName>Polyurethane resin - printing ink</fullName>
            </value>
            <value>
                <fullName>Rosin modified phenolic</fullName>
            </value>
            <value>
                <fullName>Waxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>