force-app/main/default/objects/Product2/fields/DRC_NBC_Category_Level_3__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Category_Level_3__c</fullName>
    <label>Category Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adhesion promoter</fullName>
            </value>
            <value>
                <fullName>Alkyl phenolic</fullName>
            </value>
            <value>
                <fullName>Butylated phenolic</fullName>
            </value>
            <value>
                <fullName>Epoxy diluent</fullName>
            </value>
            <value>
                <fullName>Epoxy ester</fullName>
            </value>
            <value>
                <fullName>Ester gum</fullName>
            </value>
            <value>
                <fullName>Fumaric resin</fullName>
            </value>
            <value>
                <fullName>Ketonic resin</fullName>
            </value>
            <value>
                <fullName>Maleic resin</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Polyols</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>