force-app/main/default/objects/Product2/fields/DRC_NBC_FG_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_FG_Code__c</fullName>
    <externalId>true</externalId>
    <label>FG Code</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>