force-app/main/default/objects/Product2/fields/DRC_NBC_GST_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_GST_Group_Code__c</fullName>
    <label>GST Group Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>