force-app/main/default/objects/Product2/fields/DRC_NBC_Is_Restricted__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Is_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Restricted</label>
    <type>Checkbox</type>
</CustomField>