force-app/main/default/objects/Product2/fields/DRC_NBC_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Item_Id__c</fullName>
    <label>Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>