force-app/main/default/objects/Product2/fields/DRC_NBC_KIND_OF_PKG__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_KIND_OF_PKG__c</fullName>
    <label>KIND OF PKG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IBC (900 KGS)</fullName>
            </value>
            <value>
                <fullName>163.3 MS</fullName>
            </value>
            <value>
                <fullName>165 KGS MS</fullName>
            </value>
            <value>
                <fullName>180 KGS HDPE</fullName>
            </value>
            <value>
                <fullName>180 KGS MS</fullName>
            </value>
            <value>
                <fullName>186 KGS MS</fullName>
            </value>
            <value>
                <fullName>190 KGS HDPE</fullName>
            </value>
            <value>
                <fullName>190 KGS MS</fullName>
            </value>
            <value>
                <fullName>190 KGS PVC</fullName>
            </value>
            <value>
                <fullName>195 KGS PVC</fullName>
            </value>
            <value>
                <fullName>195 KGS SS</fullName>
            </value>
            <value>
                <fullName>197 KGS PVC</fullName>
            </value>
            <value>
                <fullName>200 KGS HDPE</fullName>
            </value>
            <value>
                <fullName>200 KGS MS</fullName>
            </value>
            <value>
                <fullName>200 KGS PUBC</fullName>
            </value>
            <value>
                <fullName>200 KGS PVC</fullName>
            </value>
            <value>
                <fullName>200 KGS SS</fullName>
            </value>
            <value>
                <fullName>210 KGS DRUM</fullName>
            </value>
            <value>
                <fullName>210 KGS MS</fullName>
            </value>
            <value>
                <fullName>210 KGS PVC</fullName>
            </value>
            <value>
                <fullName>215 KGS MS</fullName>
            </value>
            <value>
                <fullName>225 KGS MS</fullName>
            </value>
            <value>
                <fullName>230 KG HDPE</fullName>
            </value>
            <value>
                <fullName>230 KGS MS</fullName>
            </value>
            <value>
                <fullName>25 KGS BAG</fullName>
            </value>
            <value>
                <fullName>25 KGS CARBOY</fullName>
            </value>
            <value>
                <fullName>250 GRAMS AL</fullName>
            </value>
            <value>
                <fullName>250 GRAMS PAPER</fullName>
            </value>
            <value>
                <fullName>250 KGS SS</fullName>
            </value>
            <value>
                <fullName>30 KGS PAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>