force-app/main/default/objects/Product2/fields/DRC_NBC_MARKS_NOS__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_MARKS_NOS__c</fullName>
    <label>MARKS &amp; NOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>