force-app/main/default/objects/Product2/fields/DRC_NBC_Show_On_Event_Form__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Show_On_Event_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Event Form</label>
    <type>Checkbox</type>
</CustomField>